# Hygiene

./: Hygiene.py  README.md  pyproject.toml
LISCENCE/: .gitignore
hygiene_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
