[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hygiene-cli"
version = "0.1.0"
description = "Give any git repo a security hygiene report card."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [{ name = "your-name-here" }]
keywords = ["security", "git", "cli", "devsecops", "secrets-detection"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
hygiene = "hygiene:main"

[tool.setuptools]
py-modules = ["hygiene"]